Fixed version conflict, added security, added group's front end files